// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots organisms/Header default 1`] = `
<header
  className="makeStyles-root-486 makeStyles-root-489"
>
  <h1
    className="makeStyles-root-490 makeStyles-root-491 makeStyles-title-487"
  >
    へっだー
  </h1>
</header>
`;

exports[`Storyshots organisms/Header with back button 1`] = `
<header
  className="makeStyles-root-492 makeStyles-root-495"
>
  <div
    className="makeStyles-rippleContainer-496"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="makeStyles-root-499 makeStyles-clickable-500 makeStyles-root-498 makeStyles-headerItem-494"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        style={
          Object {
            "fontSize": "2.4rem",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
  </div>
  <h1
    className="makeStyles-root-501 makeStyles-root-502 makeStyles-title-493"
  >
    へっだー
  </h1>
</header>
`;

exports[`Storyshots organisms/Header with search button 1`] = `
<header
  className="makeStyles-root-503 makeStyles-root-506"
>
  <h1
    className="makeStyles-root-507 makeStyles-root-508 makeStyles-title-504"
  >
    へっだー
  </h1>
  <div
    className="makeStyles-rippleContainer-509"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="makeStyles-root-512 makeStyles-clickable-513 makeStyles-root-511 makeStyles-headerItem-505"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        style={
          Object {
            "fontSize": "2.4rem",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </span>
  </div>
</header>
`;
